# String-Calculator-TDD

./: README.md
.github/workflows/: run-tests.yml
backend/: .gitignore  pyproject.toml  server.py
backend/calculator/: calculator.py
backend/tests/: test_calculator.py
calculator/: calculator.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: StringCalculator.css  StringCalculator.jsx
frontend/src/tests/: StringCalculator.test.jsx
tests/: test_calculator.py
