[tool.poetry]
name = "backend"
version = "0.1.0"
description = "String Calculator TDD Kata"
authors = ["Shruti pandey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
